<resources>
    <string name="app_name" translatable="false">BT Printer</string>

    <string name="about_us">About Us</string>
    <string name="accepted">Accepted</string>
    <string name="add_flat">Add Flat</string>
    <string name="address">Address</string>
    <string name="added_successfully">Added Successfully</string>


    <string name="call">Call</string>

    <string name="deactivated">Deactivated</string>
    <string name="delete">Delete</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="driver_name">Driver Name</string>
    <string name="direction">Direction</string>
    <string name="distance">Distance</string>

    <string name="exit">Exit</string>


    <string name="id">Id</string>


    <string name="home">Home</string>
    <string name="house">House</string>
    <string name="house_image">House Image</string>
    <string name="house_details">House Details</string>

    <string name="live">Live</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="my_flat">My Flat</string>
    <string name="modify_time">Modify Time</string>

    <string name="name">Name</string>

    <string name="pending">Pending</string>
    <string name="print">Print</string>">
    <string name="privacy_and_policy">Privacy and Policy</string>

    <string name="rate_description">Rate and Description</string>
    <string name="rate_us">Rate Us</string>
    <string name="rejected">Rejected</string>
    <string name="rejected_in_verification">Rejected in verification</string>
    <string name="refresh">Refresh</string>


    <string name="save">Save</string>
    <string name="share_app">Share App</string>
    <string name="setting">Setting</string>
    <string name="select_language">Select Language</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="system_verification_pending">System Verification Pending</string>

    <string name="there_is_some_error">There is some error</string>
    <string name="this_field_required">This field required!</string>
    <string name="this_should_be_n_digits">This should be more than 5 digits</string>

    <string name="update">Update</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="update_location">Update Location</string>


    <string name="verification_status">Verification Status</string>
    <string name="welcome_to">Welcome to …</string>
    <string name="your_location">Your Location</string>

    <string name="lm1">This version is outdated please update from google playstore to latest
        version.</string>
    <string name="lm2">Rent and List flats at your fingerprints, Explore, list, rent and connect with the perfect rental space. It\'s all in the palm of your hand.</string>


</resources>