<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_gaadi"
            android:icon="@drawable/ic_auto"
            android:title="@string/my_vehicle" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_pnp"
            android:icon="@drawable/ic_policy"
            android:title="@string/privacy_and_policy" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate_review"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/exit" />
    </group>
</menu>