<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_buttons"
            android:layout_alignParentTop="true">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/name"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_mobile_number"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/mobile_number"
                        app:startIconDrawable="@drawable/ic_call">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:maxLength="15"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_rate"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/rate_description"
                        app:startIconDrawable="@drawable/ic_normal_rate">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:inputType="textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_address"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/address"
                        app:startIconDrawable="@drawable/ic_address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:inputType="textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/house_image"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/iv_auto_photo1"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:background="@drawable/add_img"
                                android:scaleType="fitXY"
                                app:layout_constraintDimensionRatio="3:2"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:ignore="MissingConstraints" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/iv_auto_photo2"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:background="@drawable/add_img"
                                android:scaleType="fitXY"
                                app:layout_constraintDimensionRatio="3:2"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:ignore="MissingConstraints" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/iv_auto_photo3"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:background="@drawable/add_img"
                                android:scaleType="fitXY"
                                app:layout_constraintDimensionRatio="3:2"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:ignore="MissingConstraints" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/iv_auto_photo4"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:background="@drawable/add_img"
                                android:scaleType="fitXY"
                                app:layout_constraintDimensionRatio="3:2"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:ignore="MissingConstraints" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_sync"
                    app:iconGravity="textStart" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_delete"
                    app:iconGravity="textStart" />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                app:icon="@drawable/ic_done"
                app:iconGravity="textStart" />


        </LinearLayout>
    </RelativeLayout>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_cpb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="visible" />


</RelativeLayout>