<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_photo"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="fitXY"
                        app:layout_constraintDimensionRatio="3:2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/call" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/id" />

                        <TextView
                            android:id="@+id/tv_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/modify_time" />

                        <TextView
                            android:id="@+id/tv_mod_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/name" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:text="" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="@string/normal_rate" />

                        <TextView
                            android:id="@+id/tv_rate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:text="Address" />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.4"
                            android:text="" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_status"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/verification_status"
                            app:startIconDrawable="@drawable/ic_edit">

                            <AutoCompleteTextView
                                android:id="@+id/actv_status"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:inputType="none" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_admin_remark"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="7"
                            android:hint="Admin Remark"
                            app:startIconDrawable="@drawable/ic_admin_remark">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_weight="3"
                            android:text="Save" />

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </ScrollView>


</RelativeLayout>